# schannel-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yaml
src/: alpn_list.rs  bindings.rs  cert.rs  cert_chain.rs  cert_context.rs  cert_store.rs  context_buffer.rs  crypt_key.rs  crypt_prov.rs  ctl_context.rs  hyperimpl.rs  key_handle.rs  lib.rs  ncrypt_key.rs  schannel_cred.rs  security_context.rs  test.rs  tls_stream.rs
src/bindings/: cryptography.rs  generated.rs  identity.rs
src/deprecated/: crypt_prov.rs  mod.rs
test/: cert.der  cert.pem  key.der  self-signed.badssl.com.cer  self-signed.badssl.com.cer.sha1
tests/: hyper.rs  main.rs  test.rs
