[package]
name = "schannel"
license = "MIT"
version = "0.1.7"
description = "Schannel bindings for rust, allowing SSL/TLS (e.g. https) without openssl"
authors = [ "Steven Fackler <sfackler@gmail.com>", "Steffen Butzer <steffen.butzer@outlook.com>" ]
documentation = "https://docs.rs/schannel/0/x86_64-pc-windows-gnu/schannel/"
repository = "https://github.com/steffengy/schannel-rs"
readme = "README.md"
keywords = ["windows", "schannel", "tls", "ssl", "https"]
build = "build.rs"

[dependencies]
advapi32-sys = "0.2"
crypt32-sys = "0.2"
kernel32-sys = "0.2"
lazy_static = "0.2"
secur32-sys="0.2"
winapi = "0.2.8"

[build-dependencies]
winapi-build = "0.1"
