[package]
name = "schannel"
license = "MIT"
version = "0.1.21"
description = "Schannel bindings for rust, allowing SSL/TLS (e.g. https) without openssl"
authors = [
    "Steven Fackler <sfackler@gmail.com>",
    "Steffen Butzer <steffen.butzer@outlook.com>",
]
documentation = "https://docs.rs/schannel/0.1.19/schannel/"
repository = "https://github.com/steffengy/schannel-rs"
readme = "README.md"
keywords = ["windows", "schannel", "tls", "ssl", "https"]
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
windows-targets = "0.48"

[dev-dependencies]
windows-bindgen = "0.48"
